# Qt-minesweeper

./: CMakeLists.txt  MineSweeper.pro  MineSweeper.pro.user.23f03cb.4.9-pre1  MineSweeper.pro.user.f67491c.22  README.md  README.md.backup  img.qrc  lang.qrc  lang_cn.qm  lang_cn.ts  lang_cz.qm  lang_cz.ts  languages.cpp  languages.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  myitem.cpp  myitem.h  myscene.cpp  myscene.h  settingwidget.cpp  settingwidget.ui
lang/: lang_cn.qm  lang_cn.ts  lang_cz.qm  lang_cz.ts
nsis/: installer.nsi  installer2.nsi
src/: lookitem.cpp  lookitem.h  main.cpp  mainwindow.cpp  myitem.cpp  myscene.cpp  myscene.h  numitem.cpp  numitem.h  numscene.cpp  numscene.h  settingwidget.h
